# Themis

./: .env.example  .gitignore  README.md  Themis_App_Flow.md  Themis_Backend_Schema.md  Themis_Implementation_Plan.md  Themis_Revised_Detailed_PRD.md  Themis_TRD.md  Themis_UI_UX_Design.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202605130001_initial_foundation.py  202605150001_phase3_legal_search.py  202605150002_phase4_assessment_draft_indexes.py  202605150003_phase5_case_hearing_indexes.py  202605160001_phase6_legal_aid_indexes.py  202605160002_phase7_document_indexes.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: assessments.py  auth.py  cases.py  complaints.py  documents.py  health.py  legal.py  legal_aid.py  router.py
apps/api/app/core/: __init__.py  config.py  database.py  object_storage.py  security.py
apps/api/app/domain/: __init__.py  assessment_rules.py
apps/api/app/graphql/: __init__.py
apps/api/app/models/: __init__.py  assessment.py  audit.py  case.py  document.py  enums.py  legal.py  legal_aid.py  notification.py  user.py
apps/api/app/schemas/: assessment.py  auth.py  case.py  document.py  legal.py  legal_aid.py
apps/api/app/services/: audit.py  timeline.py
apps/api/app/tasks/: celery_app.py  document_ocr.py  exports.py  notifications.py  reminders.py
apps/api/scripts/: seed_legal_data.py
apps/api/tests/: test_assessments.py  test_auth.py  test_cases.py  test_documents.py  test_legal.py  test_legal_aid.py
(+54 files in other folders)
